# wprime

./: .gitignore  CMakeLists.txt  Makefile  README.md  clwprime.c  main.c  wprime.1  wprime.c  wprime.cl
.github/workflows/: latex-document.yaml
clwprime/: CMakeLists.txt
doc/: CMakeLists.txt  proof.tex  references.bib
wprime/: CMakeLists.txt  wprime.c
