CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)
PROJECT(wilsomprime)
SET(VERSION "1.0.0")
OPTION(BUILD_WPRIME_OPENCL "Build package with shared libraries." ON)
OPTION(BUILD_WPRIME "Build package with shared libraries." ON)

# GNU compiler options
IF((CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX) AND NOT CMAKE_COMPILER_IS_MINGW)
	IF (BUILD_SHARED_LIBS AND CMAKE_SIZEOF_VOID_P EQUAL 8)
		
	ENDIF()

	ADD_DEFINITIONS( -Wall -w -fpermissive -Wfatal-errors ) 
	ADD_DEFINITIONS( -DWPRIME_SOURCEPATH="/usr/local/share/clwprime/wprime.cl") 

	IF (CMAKE_BUILD_TYPE STREQUAL "Release")
		MESSAGE(STATUS "Compile for release.")
		ADD_DEFINITIONS(-DNDEBUG)
		ADD_DEFINITIONS(-O3)
		SET(CMAKE_RELEASE TRUE)
		SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
	ELSE()
		MESSAGE(STATUS "Compile for debug.")
		ADD_DEFINITIONS(-D_DEBUG)
		ADD_DEFINITIONS(-g3)
		SET(CMAKE_DEBUG TRUE)
	ENDIF()


ELSEIF(MSVC)
	ADD_DEFINITIONS(/MP)
	ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ENDIF()

IF(BUILD_WPRIME_OPENCL)
	FIND_PACKAGE(OpenCL)
	IF(OpenCL_FOUND)
		MESSAGE(STATUS "OpenCL: ${OpenCL_LIBRARY}")
	ENDIF()
	# Add execute and link library.
	ADD_EXECUTABLE(clwprime ${CMAKE_CURRENT_SOURCE_DIR}/clwprime.c )
	TARGET_LINK_LIBRARIES(clwprime ${OpenCL_LIBRARIES})

	TARGET_INCLUDE_DIRECTORIES(clwprime PRIVATE ${OpenCL_INCLUDE_DIRS})
	SET_TARGET_PROPERTIES(clwprime PROPERTIES COMPILE_FLAGS "-DCL_TARGET_OPENCL_VERSION=120")

	# Install program.
	INSTALL (TARGETS clwprime DESTINATION bin)
	INSTALL (FILES ${CMAKE_CURRENT_SOURCE_DIR}/wprime.cl DESTINATION share/clwprime)
ENDIF()
IF(BUILD_WPRIME)
	# Add execute and link library.
	ADD_EXECUTABLE(wprime ${CMAKE_CURRENT_SOURCE_DIR}/wprime.c )
	TARGET_LINK_LIBRARIES(wprime -lm)

	# Install program.
	INSTALL (TARGETS wprime DESTINATION bin)
ENDIF()

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/doc)

# Create distribution archive.
IF( UNIX )	
	SET( TARGETDIR "${PROJECT_NAME}-${VERSION}")
	ADD_CUSTOM_TARGET(	distribution
				COMMAND mkdir -p ${TARGETDIR}
				COMMAND cp -r  *.c *.cl CMakeLists.txt LICENSE ${TARGETDIR}
				COMMAND tar cf - ${TARGETDIR} | gzip -c > ${TARGETDIR}.tar.gz 
				COMMAND rm -r ${TARGETDIR} )
ENDIF()
